Published beta version on GooglePlay

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ Assets/TextMesh Pro/
 GDD/Grafiki/
 Assets/SFX/
 GDD/Sounds/
+KeyHash.txt
+lumberjack.keystore
+AndoridBuild/LumberJack_v0.1Beta.apk
